# gameboy-hifi-audio

./: .gitignore  AGENTS.md  LICENSE  README.md  ble-proxy.json
.github/workflows/: pages.yml
docs/: AGB-INSTALL.md  FIRMWARE.md  HARDWARE.md  MANUAL.md  PROTOTYPE-V1.0.md
firmware/: CMakeLists.txt  partitions.csv  platformio.ini  sdkconfig.defaults
firmware/data/: startup-custom.gsfx  startup-modern.gsfx  startup-original.gsfx  startup.gsfx
firmware/src/: CMakeLists.txt  Kconfig.projbuild  app_sm.c  app_sm.h  audio_pipeline.c  audio_pipeline.h  ble_config.c  ble_config.h  bt_a2d.c  bt_a2d.h  buttons.c  buttons.h  console.c  console.h  dsp.c  dsp.h  es8388.c  es8388.h  fs.c  fs.h  i2s_codec.c  i2s_codec.h  idf_component.yml  main.c  pinmap.h  settings.c  settings.h  sfx.c  sfx.h
hardware/agb/: bom.csv
hardware/agb/agb-hifi-audio-fpc/: agb-hifi-audio-fpc.kicad_pro  agb-hifi-audio-fpc.kicad_sch  agb-hifi-audio-fpc.stl
hardware/agb/agb-hifi-audio-fpc/libs/footprints/: 0402 Solder Bridge.kicad_mod  AGB AMP CONNECT.kicad_mod  AGB SPKR CONNECT.kicad_mod  AGB_SPKR_CONNECT.kicad_mod  FPC-Tail-12pos-0.5mm-FH12A.kicad_mod
hardware/agb/agb-hifi-audio-pcb/: agb-hifi-audio-pcb.kicad_pro  agb-hifi-audio-pcb.kicad_sch  fp-lib-table  sym-lib-table
hardware/agb/agb-hifi-audio-pcb/libs/3dmodels/: ESP32-PICO-MINI-02U-N8R2--3DModel-STEP-269445.STEP  FPC-SMD_12P-P0.50_AFC07-S12ECA-00.step  FPC-SMD_12P-P0.50_AFC07-S12ECA-00.wrl  (+1 more)
tools/: README-ble-dev.md  bringup.py  make_clip.py  plot_wavedump.py  serial_proxy.py
web/: DESIGN.md  PRODUCT.md  README.md  index.html
(+10 files in other folders)
